Fix some issues with going back to the loading panel (and remove the kind of pointless collapsing logic)

--- a/views/JoinInterfaceView/style.scss
+++ b/views/JoinInterfaceView/style.scss
@@ -21,15 +21,6 @@ $headerSize: 4em;
   #rightView {
     right: 1em;
   }
-  #rightView.collapsed,
-  #leftView.collapsed {
-    display: none;
-  }
-  #rightView.focused,
-  #leftView.focused {
-    left: 1em;
-    width: calc(100% - 2em);
-  }
 }
 
 #overlay {
